installers/aws-eks/install/templates/docs/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: docs
    ci.name: docs
  name: docs
  namespace: legend
spec:
  type: ExternalName
  externalName: finos.github.io
