installers/aws-eks/install/templates/docs/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: docs
    ci.name: docs
  name: docs
  namespace: legend
spec:
  rules:
  - host: __DNS_NAME__
    http:
      paths:
      - backend:
          serviceName: docs
          servicePort: 80
        path: /
  tls:
  - hosts:
    - __DNS_NAME__
    secretName: __TLS_SECRET_NAME__
